# activitywatch

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CUSTOM_MODIFICATIONS.md  FORK_MODIFICATIONS.md  HYAM_DESIGN_SYSTEM_COMPLETE.md  HYAM_MODIFICATIONS.md  Makefile  README.md  aw.spec  pyproject.toml
aw-export-daily-report/: .env  .gitignore  Makefile  README.md  Update Checklist for 20OCT2025.md  activity_report_grouped_2025-10-16.txt  daily_report.json  my_tasks_with_projects.json  pyproject.toml  test_asana_access.py  test_detailed_export.py  test_my_tasks.py
aw-export-daily-report/analysis/: export_20251019_234858.json
aw-export-daily-report/aw_export_daily_report/: __init__.py  __main__.py  asana_client.py  config.py  data_fetcher.py  report_formatter.py  timeline_analyzer.py  web_server.py
aw-export-daily-report/config/: settings.json
aw-export-daily-report/web/: index.html  settings.html
aw-export-daily-report/web/static/: app.js  settings.css  settings.js  styles.css
